[package]
name = "quic-noise-web"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
bytes = "1"
js-sys = "0.3"
quinn-proto = { version = "0.9", default-features = false }
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = { version = "0.2", default-features = false }
wasm-bindgen-futures = "0.4"